crates/hector-cli/tests/snapshots/cli_e2e_explain__explain_lockfile_json.snap
---
source: crates/hector-cli/tests/cli_e2e_explain.rs
expression: v
---
{
  "rules": [
    {
      "matched_glob": null,
      "rule_id": "any-md",
      "scopes": [
        "*.md"
      ],
      "status": "skip"
    },
    {
      "matched_glob": null,
      "rule_id": "rs-rule",
      "scopes": [
        "**/*.rs"
      ],
      "status": "skip"
    },
    {
      "matched_glob": null,
      "rule_id": "ts-rule",
      "scopes": [
        "**/*.ts"
      ],
      "status": "skip"
    }
  ],
  "skip": {
    "pattern": "Cargo.lock"
  }
}
