crates/hector-cli/tests/snapshots/cli_e2e_explain__explain_md_file_json.snap
---
source: crates/hector-cli/tests/cli_e2e_explain.rs
expression: v
---
{
  "rules": [
    {
      "matched_glob": "*.md",
      "rule_id": "any-md",
      "scopes": null,
      "status": "match"
    },
    {
      "matched_glob": null,
      "rule_id": "rs-rule",
      "scopes": [
        "**/*.rs"
      ],
      "status": "skip"
    },
    {
      "matched_glob": null,
      "rule_id": "ts-rule",
      "scopes": [
        "**/*.ts"
      ],
      "status": "skip"
    }
  ],
  "skip": null
}
